# skillich

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
.github/DISCUSSION_TEMPLATE/: rating-feedback.yml
.github/ISSUE_TEMPLATE/: feedback.yml
.github/workflows/: ci.yml  pages.yml
adapters/: anthropic_adapter.py  openai_adapter.py
cli/: export.py  formatters.py  main.py
core/: __init__.py  base.py  content_validator.py  registry.py  schema_validator.py  taxonomy.py  validation.py
docs/: CONTRIBUTING.md  ai-skills.md  assessment.md  playbook.md  review-process.md  skills.md
mcp_server/: server.py
skills/common/: calculator.py
skills/local/: local_llm.py
skills/taxonomy_skills/: ai_impact_analyzer.py  career_advisor.py  learning_path.py  role_explorer.py  skill_assessor.py
taxonomy/ai_and_agents/: _function.yaml  ai_agent_developer.yaml  ai_evaluator.yaml  ai_ops_engineer.yaml  ai_trainer.yaml  prompt_engineer.yaml
taxonomy/creative/: _function.yaml  content_writer.yaml  game_designer.yaml  graphic_designer.yaml  musician_audio.yaml  video_producer.yaml
taxonomy/data_analytics/: _function.yaml  analytics_engineer.yaml  bi_analyst.yaml  data_analyst.yaml  data_scientist.yaml
taxonomy/design/: _function.yaml  design_systems.yaml  ui_designer.yaml  ux_designer.yaml  ux_researcher.yaml
taxonomy/engineering/: _function.yaml  backend.yaml  cloud_infrastructure.yaml  data_engineering.yaml  devops_sre.yaml  frontend.yaml  fullstack.yaml  ml_engineering.yaml  mobile.yaml  qa_testing.yaml  security_engineering.yaml
taxonomy/finance/: _function.yaml  accountant.yaml  auditor.yaml  controller.yaml  financial_analyst.yaml  fp_and_a.yaml
taxonomy/hr/: _function.yaml  (+5 more)
tests/: conftest.py  test_adapters.py  test_base.py  test_calculator.py  test_career_advisor.py  test_cli.py  test_mcp_server.py  test_registry.py  test_schema_validator.py  test_taxonomy.py  test_validation.py
web/: generate.py  resources.json
(+62 files in other folders)
